# versavis

firmware/basic_lrf/: basic_lrf.ino
firmware/libraries/NMEAParser/src/: NMEAParser.h
firmware/libraries/versavis/src/: Lrf.cpp  Lrf.h  Uart.cpp  Uart.h  versavis_configuration.h
firmware/versavis/: versavis.ino
firmware/versavis_lrf/: versavis_configuration.h  versavis_lrf.ino
firmware/versavis_lrf/lrf_versavis.ino/: lrf_versavis.ino.ino
serial_msgs/: CMakeLists.txt  package.xml
serial_msgs/msg/: Sentence.msg
versavis/launch/: run_versavis_no_cam.launch
